Set up head include and add icon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+---
+title: Kanji
+---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
-  <meta charset="utf-8">
-  <title>Kanji Family</title>
+  {% include head.html %}
 </head>
 <body>
   <h1>The website of the Kanji family.</h1>
