--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 ---
 title: Kanji
+layout: default
 ---
-<!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
-<head>
-  {% include head.html %}
-</head>
-<body>
-  <h1>The website of the Kanji family.</h1>
-</body>
-</html>
+<h1>The website of the Kanji family.</h1>
